<resources>
    <string name="app_name">theynotlikeus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_username">Welcome Username!</string>
    <string name="feb_01_2025">Feb,01,2025</string>
    <string name="reason_i_hit_chest_today">Trigger <q></q>: I hit chest today!</string>
    <string name="happy">Happy</string>
    <string name="select_date_drop_down">Select Date</string>
    <string name="select_mood_drop_down">Select Mood</string>
    <string name="filter_your_moods_by">Filter your moods by:</string>
    <string name="search_keyword">Search keyword</string>
    <string name="comment_author_example">LeBron James</string>
    <string name="comment_text_example">Don\'t be afraid of failure. This is the way ot succeed.</string>
    <string-array name="moods">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="storage_for_each_photographic_image_to_be_under_65536_bytes">Storage for each photographic image to be under 65536 bytes</string>
    <string name="logout">Logout</string>
    <string name="reason">Reason:</string>
    <string name="location">Location</string>
    <string name="reason_value">reason value</string>
    <string name="date_and_time">Date and Time</string>
    <string name="social_situation">Social situation</string>
    <string name="username">Username</string>
    <string name="your_mood_details">Your Mood Details</string>
    <string name="go_back">Go back</string>
    <string name="select_image_for_mood_event">Select image for mood event</string>
    <string name="mood_event">Mood Event</string>
    <string name="mood_image">Mood Image</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_image_optional">Select Image (Optional)</string>
    <string name="reason_optional">Reason (Optional)</string>
    <string name="save">Save</string>
    <string name="select_social_situation">Social Situation:</string>
    <string name="location_unknown">Location: Unknown</string>
    <string name="welcome_administrator">Welcome Administrator</string>
    <string name="create_account_and_login">Create Account and Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_user_sign_up">Password</string>
    <string name="username_user_sign_up">Username</string>
    <string name="user_login">User Login</string>
    <string name="sign_in_user">Sign In</string>
    <string name="sign_up_user">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have an account ?</string>
    <string name="username_user_login">username</string>
    <string name="password_user_login">password</string>
    <string name="recent_week">Recent Week</string>
    <string name="welcome_username_home_moods">Welcome Username</string>
    <string name="filter_by_mood">Filter by Mood</string>
    <string name="search_moods">Search moods</string>
    <string name="back_button_add_mood">Back_button</string>
    <string name="mood_add_mood">Mood</string>
    <string name="trigger_add_mood">Trigger</string>
    <string name="trigger_add_mood_edittext">Trigger</string>
    <string name="social_situation_add_mood">Social Situation</string>
    <string name="public_mood_entry_add_mood">Public Mood Entry</string>
    <string name="geolocation_optional_add_mood">Geolocation (Optional)</string>
    <string name="back_community">Back</string>
    <string name="community_map_community_map">Community Map</string>
    <string name="public_mood_entry_edit_delete_mood">Public Mood Entry</string>
    <string name="back_button_edit_delete_mood">Back button</string>
    <string name="delete_button_edit_delete_mood">delete_button</string>
    <string name="mood_event_edit_delete_mood">Mood Event</string>
    <string name="select_image_optional_edit_delete_mood">Select Image (Optional)</string>
    <string name="trigger_edit_delete_mood">Trigger</string>
    <string name="mood_edit_delete_mood">Mood</string>
    <string name="trigger_edit_delete_mood_edit_text">Trigger</string>
    <string name="social_situation_edit_delete_mood">Social Situation</string>
    <string name="geolocation_optional_edit_delete_mood">Geolocation (Optional)</string>
    <string name="save_edit_delete_mood">Save</string>
    <string name="friend_mood_details_edit_delete_mood">Friend Mood Details</string>
    <string name="comments_friend_mood">Comments</string>
    <string name="comments_mood_details">Comments</string>
    <string name="user_details_personal_profile">User Details</string>
    <string name="username_personal_profile">Username:</string>
    <string name="username_search_user">Username</string>
    <string name="select_image_for_mood_event_followed">Select image for mood event</string>
    <string name="username_followed">Username</string>
    <string name="select_image_for_mood_event_comments">Select image for mood event</string>
    <string name="select_image_for_mood_event_comments_imagebutton">Select image for mood event</string>
    <string name="comments_comments">Comments</string>
    <string name="moods_admin_login">Moods</string>
    <string name="admin_login_page_admin_login">Admin Login Page</string>
    <string name="sign_in_admin_login">Sign In</string>
    <string name="recent_week_community">Recent Week</string>
    <string name="community_community">Community</string>
    <string name="username_follower_layout">Username</string>
    <string name="accept_follower_layout">Accept</string>
    <string name="decline_follower_layout">Decline</string>
    <string name="follow_requests_follower_request">Follow Requests</string>
    <string name="my_locations_map">My Locations</string>
    <string name="go_to_community_map_map">Go to Community Map</string>
    <string name="username_comminity_mood">Username</string>
    <string name="mood_title_community_mood">Mood Title</string>
    <string name="trigger_description_community_mood">Trigger description</string>
    <string name="social_situation_community_mood">Social Situation</string>
    <string name="feb_01_2025_community_mood">Feb 01, 2025</string>
    <string name="moods_user_select">Moods</string>
    <string name="user_user_select">User</string>
    <string name="admin_user_select">Admin</string>
    <string name="social_situation_mood_event">Social Situation</string>
    <string name="moods_user_login">Moods</string>
    <string name="moods_signup">Moods</string>
    <string name="sign_up_signup">Sign up</string>
    <string name="search_user">Search User</string>
</resources>