<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background">



    <Switch
        android:id="@+id/switch_ActivityEditDeleteMood_privacy"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:text="@string/public_mood_entry_edit_delete_mood"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_DeleteEditMoodActivity_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switch_DeleteEditMoodActivity_geoSwitch"
        app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton_DeleteEditMoodActivity_back"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="87dp"
        android:background="@null"
        android:src="@drawable/ic_white_back_button"
        android:contentDescription="Back button"
        android:translationY="15dp"
        app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodActivity_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_DeleteEditMoodActivity_delete"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/delete_button_edit_delete_mood"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete_button"
        android:translationY="10dp"
        app:backgroundTint="@color/black_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_DeleteEditMoodActivity_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_DeleteEditMoodActivity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/mood_event_edit_delete_mood"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview_DeleteEditMoodActivity_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/mood_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/button_DeleteEditMoodActivity_selectImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_DeleteEditMoodActivity_title" />

    <Button
        android:id="@+id/button_DeleteEditMoodActivity_selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        android:backgroundTint="@color/primary_blue"
        app:layout_constraintBottom_toTopOf="@id/textView_DeleteEditMoodActivity_selectImagetext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_DeleteEditMoodActivity_photo" />

    <TextView
        android:id="@+id/textView_DeleteEditMoodActivity_selectImagetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/select_image_optional_edit_delete_mood"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_DeleteEditMoodActivity_selectImage" />

    <TextView
        android:id="@+id/textView_DeleteEditMoodActivity_triggerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trigger_edit_delete_mood"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_DeleteEditMoodActivity_triggerInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_currentMoodspinner" />

    <TextView
        android:id="@+id/textView_DeleteEditMoodActivity_moodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/mood_edit_delete_mood"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_DeleteEditMoodActivity_selectImagetext" />

    <Spinner
        android:id="@+id/spinner_DeleteEditMoodActivity_currentMoodspinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#282727"
        android:backgroundTintMode="screen"
        android:entries="@array/moods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_DeleteEditMoodActivity_selectImagetext" />

    <EditText
        android:id="@+id/editText_DeleteEditMoodActivity_triggerInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@color/text_box_background"
        android:backgroundTint="#282727"
        android:backgroundTintMode="src_over"
        android:hint="@string/trigger_edit_delete_mood_edit_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_DeleteEditMoodActivity_currentMoodspinner" />

    <TextView
        android:id="@+id/textView_DeleteEditMoodActivity_socialSituationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/social_situation_edit_delete_mood"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_DeleteEditMoodActivity_triggerInput" />

    <Spinner
        android:id="@+id/spinner_DeleteEditMoodActivity_socialsituation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/social_situations"
        android:popupBackground="@color/black_background"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_DeleteEditMoodActivity_socialSituationLabel" />


    <Switch
        android:id="@+id/switch_DeleteEditMoodActivity_geoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/geolocation_optional_edit_delete_mood"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button_DeleteEditMoodActivity_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/save_edit_delete_mood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_DeleteEditMoodActivity_geoSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>
