<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="#282727"
    android:elevation="4dp"
    android:padding="12dp"
    android:radius="12dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_ViewCommentsActivityCommentLayout_commentAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_author_example"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_ViewCommentsActivityCommentLayout_commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_ViewCommentsActivityCommentLayout_commentAuthor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_ViewCommentsActivityCommentLayout_dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feb_01_2025"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>