<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_activitymoodeventdetails_level1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".view.MoodEventDetailsActivity">

    <!-- Back Button using MaterialButton with an icon -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_white_back_button"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->

    <!-- Edit Button using MaterialButton with an icon -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/material_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_mood_details"
        android:layout_margin="0dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_button_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_edit_button"
        app:iconSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- MaterialCardView container for mood event details -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="468dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_text_title">

        <!-- Mood Image using ShapeableImageView -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeable_imageview_mood"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_happy_emoticon" />

        <!-- Username -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/shapeable_imageview_mood"
            app:layout_constraintTop_toTopOf="@id/shapeable_imageview_mood" />

        <!-- Social Situation -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_socialsituation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/social_situation"
            android:textColorHint="#898888"
            app:layout_constraintStart_toStartOf="@id/shapeable_imageview_mood"
            app:layout_constraintTop_toBottomOf="@id/shapeable_imageview_mood" />

        <!-- Trigger Value -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_triggervalue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/reason_value"
            android:textColorHint="#898888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/material_text_socialsituation"
            app:layout_constraintTop_toBottomOf="@id/material_text_socialsituation" />

        <!-- Date and Time -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_dateandtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/date_and_time"
            android:textColorHint="#898888"
            app:layout_constraintStart_toStartOf="@id/material_text_triggervalue"
            app:layout_constraintTop_toBottomOf="@id/material_text_triggervalue" />

        <!-- Location -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location_unknown"
            android:textColorHint="#898888"
            app:layout_constraintStart_toStartOf="@id/material_text_dateandtime"
            app:layout_constraintTop_toBottomOf="@id/material_text_dateandtime" />

        <!-- Uploaded Photo using ShapeableImageView -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeable_imageview_uploadedphoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@color/black_background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_text_location" />

        <!-- Comment Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Comments"
            app:backgroundTint="#22238B"
            app:layout_constraintEnd_toEndOf="@id/shapeable_imageview_uploadedphoto"
            app:layout_constraintStart_toStartOf="@id/shapeable_imageview_uploadedphoto"
            app:layout_constraintTop_toBottomOf="@id/shapeable_imageview_uploadedphoto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
